Fix grid spacing and spacing between subheaders and content.

--- a/src/resources/postcss/tribe-common-admin/settings/_props.pcss
+++ b/src/resources/postcss/tribe-common-admin/settings/_props.pcss
@@ -40,7 +40,7 @@
 	@custom-media --settings-sidebar (min-width: 1024px);
 
 	@media (--viewport-xsmall) {
-		--tec-spacer-settings-form-row-gap: var(--tec-spacer-7);
+		--tec-spacer-settings-form-row-gap: var(--tec-spacer-6);
 	}
 
 	@media (--viewport-wpadmin) {
