--- a/src/resources/postcss/tribe-common-admin/settings/grid-elements/_content-section.pcss
+++ b/src/resources/postcss/tribe-common-admin/settings/grid-elements/_content-section.pcss
@@ -46,7 +46,7 @@
 		}
 
 		.tec-settings-form__section-header--sub {
-			margin-top: 0;
+			margin: 0;
 
 			@media (--viewport-xlarge) {
 				margin-left: var(--tec-spacer-7);
